--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
+    "firebase": "^11.9.0",
     "framer-motion": "^12.15.0",
     "idb-keyval": "^6.2.2",
     "lucide-react": "^0.511.0",
